cluster/manifests/utilities/etcd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/component: etcd
  ports:
    - name: tcp-client
      port: 2379
      protocol: TCP
      targetPort: client
    - name: tcp-peer
      port: 2380
      protocol: TCP
      targetPort: peer
